syntax = "proto3";

package rds;


/*
NOTE: This file is for inter-agent RPCs that are not directly related to the main services.
These RPCs are used for health checks, monitoring, or other auxiliary tasks that agents may need to perform.

- Only use unary RPCs in this file.
- Any other RPCs will be resulted in authentication errors.

This RPC's are meant to be used in inter-agent communication, But controlplane is also allowed to use these RPCs.

Requirement for RPC method:
- Must be unary RPCs.
- Each request should container a field `cluster_id`  to identify the cluster on server end.
*/

service InterAgentRpcService {

}